--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
-icewm -- authors file.  2024-05-20
+icewm -- authors file.  2024-06-06
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Rodrigo Macedo <sottomaiormacedotec@sottomaiormacedo.tech>
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: Luna  Jernberg <bittin@opensuse.org>
 Author: David Medina <medipas@gmail.com>
 Author: openSUSE Weblate <weblate-noreply@opensuse.org>
@@ -26,7 +28,6 @@ Author: gijsbers <gijsbers@users.noreply.github.com>
 Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
 Author: Gustavs Kivlenieks <kivlenieksgustavs@proton.me>
 Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
-Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: ItzSelenux <74371741+ItzSelenux@users.noreply.github.com>
 Author: Temuri Doghonadze <temuri.doghonadze@gmail.com>
 Author: Jan Papež <honyczek@centrum.cz>
